connect mongo, handle first requests

--- a/server/resources/config.ini
+++ b/server/resources/config.ini
@@ -1,4 +1,7 @@
 [Web]
-server_type=Sanic
-host=0.0.0.0
-port=8080
+server_type = Sanic
+host = 0.0.0.0
+port = 8080
+[Mongo]
+url = mongodb://mongo:27017
+database = nosql-sports-nutrition
