--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,15 @@ version: '3.8'
 services:
   server:
     container_name: server
+    volumes:
+      - "./log:/log"
     ports:
       - "8080:8080"
     build: ./server
+    depends_on:
+      - mongodb
+  mongodb:
+    container_name: mongo
+    image: mongo:6.0.2
+    ports:
+      - "27017:27017"
