--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,13 @@
 version: '3.8'
 
 services:
+  client:
+    container_name: client
+    build: ./client
+    depends_on:
+      - server
+    ports:
+      - "3000:3000"
   server:
     container_name: server
     volumes:
