--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -4,24 +4,35 @@
     "es2021": true,
     "jest": true
   },
-  "extends": ["prettier"],
+  "extends": [
+    "prettier"
+  ],
   "overrides": [],
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module",
     "parser": "@typescript-eslint/parser",
-    "project": ["./tsconfig.json"]
+    "project": [
+      "./tsconfig.json"
+    ]
   },
-  "plugins": ["react"],
+  "plugins": [
+    "react"
+  ],
   "rules": {
     "no-unused-vars": "off",
     "react/jsx-filename-extension": [
       1,
       {
-        "extensions": [".tsx"]
+        "extensions": [
+          ".tsx"
+        ]
       }
     ],
-    "max-len": ["error", 120]
+    "max-len": [
+      "error",
+      120
+    ]
   },
   "settings": {
     "import/resolver": {
@@ -29,7 +40,13 @@
       //                "config": "webpack/resolve.js"
       //            },
       "node": {
-        "extensions": [".ts", ".js", ".tsx", ".jsx", ".json"]
+        "extensions": [
+          ".ts",
+          ".js",
+          ".tsx",
+          ".jsx",
+          ".json"
+        ]
       }
     }
   }
